--- a/.classpath
+++ b/.classpath
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
+	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-18">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
@@ -11,5 +11,6 @@
 	<classpathentry exported="true" kind="lib" path="C:/Users/Home/Downloads/BungeeCord.jar"/>
 	<classpathentry exported="true" kind="lib" path="C:/Users/Home/Desktop/SKYZERMC BACKUP GERAL/RANKUP/plugins/PlaceholderAPI-2.11.6.jar"/>
 	<classpathentry exported="true" kind="lib" path="C:/Users/Home/Desktop/SKYZERMC BACKUP GERAL/RANKUP/plugins/worldedit-bukkit-6.1.9.jar"/>
+	<classpathentry exported="true" kind="lib" path="C:/Users/Home/Downloads/HikariCP-3.4.5.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
